Tercera parte del proyecto, funcionando con base de datos local

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
+spring:
+  datasource:
+    url: jdbc:sqlserve://USUARIO-PC\\MSSQLSERVER;database=MetroV2
+    username: user
+    password: password
+    driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
+    hikari:
+      minimum-idle: 1
+      maximum-pool-size: 10
+      pool-name: collectionPool
+      auto-commit: false
 
+ jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: update
+      naming:
+        physical-strategy: org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
+        implicit-strategy: org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
